# bibtex-cleaning-agent

./: .gitignore  LICENSE  README.md  bibtex_cleaner_config.yaml  pyproject.toml
src/bibtex_cleaner/: cleaner.py  cli.py  metadata.py  utils.py
src/bibtex_cleaner/prompts/: bibtex_cleaning_prompt.md  conference_enhancement_prompt.md
